# soh-test

./: .gitignore  Dockerfile
aws/: soh-test-aws.cabal
docker/: soh-test-docker.cabal
