name:                soh-test-docker
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Tim Dysinger
maintainer:          tim@dysinger.net
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable soh-test-docker
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:       async
                     , base >=4.7 && <5
                     , classy-prelude-yesod
                     , conduit-extra
                     , file-embed
                     , filepath
                     , temporary
                     , yesod
